--- a/firebase.json
+++ b/firebase.json
@@ -4,11 +4,14 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": ".next/server/app",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "frameworksBackend": {
+      "region": "asia-east1"
+    }
   }
 }
